--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1"
