--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "scripts": {
+    "build": "npx tsc"
+  },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.4.9",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
@@ -11,5 +13,8 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.5.0"
   }
 }
