--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
