--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
@@ -16,6 +13,9 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/node": "^20.5.0"
+    "@types/node": "^20.5.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97"
   }
 }
