--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "scripts": {
     "build": "npx tsc",
+    "prestart": "npm run build",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
@@ -13,9 +15,10 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/node": "^20.5.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.5.0"
   }
 }
