--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "build": "npx tsc",
+    "clean": "rimraf dist/*",
+    "copy-assets": "ts-node tools/copyAssets.ts",
+    "build": "npm-run-all clean",
     "prestart": "npm run build",
-    "start": "node dist/index.js"
+    "start": "node ."
   },
   "dependencies": {
     "axios": "^1.3.6",
@@ -18,7 +20,15 @@
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.5.0"
+    "@types/node": "^20.5.0",
+    "@types/shelljs": "^0.8.12",
+    "fs-extra": "^11.1.1",
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.1",
+    "shelljs": "^0.8.5",
+    "ts-node": "^10.9.1"
   }
 }
